--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lejsutils/nest",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,10 @@
     "@nestjs/core": "^10.0.3",
     "@nestjs/event-emitter": "^2.0.0",
     "@lejsutils/client": "^0.1.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tafm/lejs-nest"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.60.1",
