--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@lejsutils/client": "^0.1.1",
     "@nestjs/common": "^10.0.3",
     "@nestjs/core": "^10.0.3",
-    "@nestjs/event-emitter": "^2.0.0",
-    "@lejsutils/client": "^0.1.1"
+    "@nestjs/event-emitter": "^2.0.0"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "git-commit-msg-linter": "^5.0.4",
     "prettier": "^2.8.8",
     "typescript": "^5.1.5"
   }
